--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
+    "apisauce": "^0.3.0",
     "react": "15.2.1",
-    "react-native": "^0.29.0"
+    "react-native": "^0.29.0",
+    "react-native-animatable": "^0.6.1",
+    "react-native-vector-icons": "^2.0.3"
   }
 }
