--- a/package.json
+++ b/package.json
@@ -7,9 +7,19 @@
   },
   "dependencies": {
     "apisauce": "^0.3.0",
+    "immutable": "^3.8.1",
+    "native-base": "^0.5.2",
     "react": "15.2.1",
     "react-native": "^0.29.0",
     "react-native-animatable": "^0.6.1",
-    "react-native-vector-icons": "^2.0.3"
+    "react-native-fbsdk": "^0.3.0",
+    "react-native-loading-spinner-overlay": "^0.3.0",
+    "react-native-navbar": "^1.5.0",
+    "react-native-scrollable-tab-view": "^0.5.3",
+    "react-native-vector-icons": "^2.0.3",
+    "react-redux": "^4.4.5",
+    "reactotron": "^0.8.0",
+    "redux": "^3.5.2",
+    "tcomb-form-native": "^0.6.0"
   }
 }
