--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "reactotron": "^0.8.0",
     "redux": "^3.5.2",
     "tcomb-form-native": "^0.6.0"
+  },
+  "devDependencies": {
+    "eslint": "^3.2.2"
   }
 }
